fix performance warnings in code